# edgelake

./: .env.example  .gitignore  README.md  pyproject.toml  setup.bat
edgelake/: cli.py  config.py  ledger.py
edgelake/emburse/: selectors.py  session.py  uploader.py
edgelake/fetchers/: __init__.py  blinkit.py
edgelake/parsers/: pdf.py
edgelake/telegram_bot/: bot.py  vision.py
